# contract-upgrade-test

contracts/test_demo1/: Cargo.toml  lib.rs
contracts/test_demo2/: Cargo.toml  lib.rs
runtime/src/: chain_extension.rs  lib.rs
runtime/tests/: Cargo.toml  lib.rs
